# IdiotGame

./: CMakeLists.txt
src/: DurakServerMain.cpp  NetAiClientMain.cpp  main.cpp
src/core/: Actions.hpp  ClassicRules.cpp  ClassicRules.hpp  Exception.hpp  Game.cpp  Game.hpp  Judge.cpp  Judge.hpp  OmegaException.hpp  Player.hpp  RandomAi.cpp  RandomAi.hpp  Rules.hpp  State.hpp  Types.hpp  Util.hpp
src/debug/: AuditLogger.cpp  AuditLogger.hpp  Inspector.hpp  Invariants.hpp  RecordingPlayer.hpp
src/net/: RemotePlayer.cpp  RemotePlayer.hpp  codec.cpp  codec.hpp
src/schemas/: durak_net.fbs
src/tests/: CodecRandAi.cpp  RandomAi.cpp  RandomAi.hpp  selfplay.cpp  selfplay_6p.cpp
